bug #62955 - Dialog boxes are the wrong size.